# SCOPE

./: .gitignore  Makefile.am  Makefile.in  README  README.md  SCOPA.cpp  SCOPA.h  analysis.R  bootstrap.sh  check_stats.py  config.h  config.h.in  configure  configure.ac  count_trimpoly.py  license.txt  wrapper.py
basic/: basic_clean.py
example/: test.fastq
human_validated_data/: Arabidopsis.Illumina.polyA.500.fa  Arabidopsis.Illumina.polyT.500.fa  Chlamy.454.polyA.500.fa  Chlamy.454.polyT.500.fa  Human.Sanger.polyA.500.fa  Human.Sanger.polyT.500.fa
human_validated_data/.svn/: all-wcprops  entries
human_validated_data/.svn/text-base/: all.polyA.500.fa.svn-base  all.polyT.500.fa.svn-base
manuscript/: Genomics.docx  Response to Reviewers.docx  SM.doc  cover_letter.doc  fig1.docx  fig2.docx  fig3.docx  fig4.docx  ~$nomics.docx
parse/: scope_parser.py
sim/: Ara.A.svb.out  Ara.T.svb.out  Chl.A.svb.out  Chl.T.svb.out  Human.A.svb.out  Human.T.svb.out  analysis.R  cleaningTools.py  cleaningToolsRH.py  dnaSeq.py  fix_file.py  karro_sim.py  karro_sim2.py  new.redhawk.py  redhawk.py  run_error  test_basic  validate.py
src/: Alignment.h  Makefile  Makefile.am  Makefile.in  SCOPA.cpp  SCOPE.cpp  SCOPE.h  Viterbi.cpp  Viterbi.h  build_ghmm.cpp  build_ghmm.h  matrix.hh  test.cpp
test/: analyze.py  scope_tests.py
